# magsim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  test_config.toml
apps/frontend/: magical_athlete_analysis.py  pyproject.toml
apps/simul_runner/: pyproject.toml
apps/simul_runner/simul_runner/: cli.py  combinations.py  config.py  db_manager.py  runner.py
apps/simul_runner/simul_runner/db/: manager.py  models.py
configs/: example.toml  full_config_v1.toml
docs/: index.html  magical_athlete_analysis.css
docs/assets/: dependency-graph-panel-Dy8lj02R.js  edit-page-Boj4r8n8.js  glide-data-editor-Brckuic5.js  index-BQNCH-dG.css  index-CGfe1Tpd.js
docs/results/: race_positions.parquet  racer_results.parquet  races.parquet
frontend/: magical_athlete_analysis.py  pyproject.toml  test_charts.py
magical_athlete_simulator/: game.py  run_game.py
magical_athlete_simulator/ai/: sandbox.py  smart_agent.py
magical_athlete_simulator/core/: __init__.py  abilities.py  agent.py  events.py  mixins.py  modifiers.py  protocols.py  registry.py  state.py  types.py
magical_athlete_simulator/engine/: abilities.py  board.py  flow.py  game_engine.py  logging.py  movement.py  roll.py
magical_athlete_simulator/racers/: baba_yaga.py  banana.py  centaur.py  copycat.py  flip_flop.py  gunk.py  huge_baby.py  magician.py  mastermind.py  party_animal.py  scoocher.py
results/: racer_results.parquet  races.parquet
scripts/: publish_frontend.sh  release_prep.py  run_game.py
src/magical-athlete-simulator/: game.py
src/magical_athlete_simulator/: __main__.py  cli.py  recompute.py
src/magical_athlete_simulator/ai/: baseline_agent.py  evaluation.py  sandbox.py
src/magical_athlete_simulator/analysis/: aggregation.py  baseline.py
src/magical_athlete_simulator/cli/: converters.py
src/magical_athlete_simulator/cli/commands/: batch.py  compare.py  game.py  recompute.py
src/magical_athlete_simulator/core/: abilities.py  agent.py  events.py  mixins.py  palettes.py  registry.py  state.py  types.py
src/magical_athlete_simulator/data/: racer_stats.json
src/magical_athlete_simulator/engine/: abilities.py  board.py  flow.py  game_engine.py  logging.py  movement.py  roll.py  scenario.py
src/magical_athlete_simulator/racers/: __init__.py  alchemist.py  baba_yaga.py  banana.py  blimp.py  centaur.py  cheerleader.py  coach.py  copycat.py  dicemonger.py  duelist.py  egg.py  flip_flop.py  genius.py  gunk.py  hare.py  heckler.py  huge_baby.py  hypnotist.py  inchworm.py  lackey.py  leaptoad.py  legs.py  lovable_loser.py  magician.py  mastermind.py  mouth.py  party_animal.py  rocket_scientist.py  romantic.py  scoocher.py  sisyphus.py  skipper.py  stickler.py  suckerfish.py  third_wheel.py  twin.py
src/magical_athlete_simulator/simulation/: combinations.py  config.py  hashing.py  metrics.py  runner.py  telemetry.py
src/magical_athlete_simulator/simulation/db/: manager.py  models.py
src/magsim/: __init__.py  __main__.py
src/magsim/ai/: baseline_agent.py  evaluation.py  sandbox.py  smart_agent.py
src/magsim/analysis/: aggregation.py  baseline.py
src/magsim/cli/: converters.py
src/magsim/cli/commands/: batch.py  compare.py  game.py  gui.py  recompute.py
src/magsim/core/: abilities.py  agent.py  events.py  mixins.py  modifiers.py  palettes.py  registry.py  state.py  types.py
src/magsim/data/: racer_stats.json
src/magsim/engine/: abilities.py  board.py  flow.py  game_engine.py  logging.py  loop_detection.py  movement.py  roll.py  scenario.py
src/magsim/racers/: __init__.py  alchemist.py  baba_yaga.py  banana.py  blimp.py  centaur.py  cheerleader.py  coach.py  copycat.py  dicemonger.py  duelist.py  egg.py  flip_flop.py  genius.py  gunk.py  hare.py  heckler.py  huge_baby.py  hypnotist.py  inchworm.py  lackey.py  leaptoad.py  legs.py  lovable_loser.py  magician.py  mastermind.py  mouth.py  party_animal.py  rocket_scientist.py  romantic.py  scoocher.py  sisyphus.py  skipper.py  stickler.py  suckerfish.py  third_wheel.py  twin.py
src/magsim/simulation/: combinations.py  config.py  runner.py  telemetry.py
src/magsim/simulation/db/: manager.py
tests/: conftest.py  test_board.py  test_racer_banana.py  test_racer_centaur.py  test_racer_copycat.py  test_racer_gunk.py  test_racer_huge_baby.py  test_racer_magician.py  test_racer_scoocher.py  test_simulation.py  test_utils.py
tests/ai/: test_simulation.py
tests/core/: test_events.py
tests/engine/: test_board.py  test_simultaneous_movement.py  test_turn_order.py
tests/misc/: test_full_race.py  test_timing_rules.py
tests/racers/: test_alchemist.py  test_baba_yaga.py  test_banana.py  test_blimp.py  test_centaur.py  test_cheerleader.py  test_coach.py  test_copycat.py  test_dicemonger.py  test_duelist.py  test_egg.py  test_flip_flop.py  test_gunk.py  test_hare.py  test_heckler.py  test_huge_baby.py  test_hypnotist.py  test_inchworm.py  test_lackey.py  test_leaptoad.py  test_legs.py  test_lovable_loser.py  test_magician.py  test_mastermind.py  test_mouth.py  test_party_animal.py  test_racer_centaur.py  test_racer_copycat.py  test_racer_flip_flop.py  test_racer_huge_baby.py  test_rocket_scientist.py  test_romantic.py  test_scoocher.py  test_sisyphus.py  test_skipper.py  test_stickler.py  test_suckerfish.py  test_third_wheel.py  test_twin.py
