[project]
name = "magical-athlete-workspace"
version = "0.1.0"
description = "A workspace for Magical Athlete simulation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["magical-athlete-simulator", "simul_runner"]

[tool.uv.workspace]
members = [
    "packages/magical-athlete-simulator",
    "apps/frontend",
    "apps/simul_runner",
]

[tool.uv.sources]
magical-athlete-simulator = { workspace = true }
simul_runner = { workspace = true }


[dependency-groups]
dev = ["pytest>=9.0.2", "ruff==0.8.4", "basedpyright==1.23.0"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "PLR",
    "E501",
    "G004",
    "TRY003",
    "EM101",
    "S311",
    "C901",
    "RET505",
]

[tool.ruff]
exclude = ["packages/magical-athlete-simulator/tests", "apps/frontend"]

[tool.basedpyright]
include = [
    "packages/magical-athlete-simulator/src",
    "packages/magical-athlete-simulator/tests",
    "apps/simul_runner/simul_runner",
]
exclude = ["apps/frontend"]
executionEnvironments = [
    { root = "packages/magical-athlete-simulator/src" },
    { root = "packages/magical-athlete-simulator/tests" },
    { root = "apps/simul_runner" },
]


reportImportCycles = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnusedCallResult = "none"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
pythonpath = ["packages/magical-athlete-simulator/tests"]
testpaths = ["packages/magical-athlete-simulator/tests"]
