[project]
name = "magical-athlete-simulator"
version = "0.2.0"
description = "A simulator for Magical Athlete"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyarrow>=22.0.0", "rich>=14.2.0"]

[project.optional-dependencies]
cli = [
    "cappa>=0.31.0",
    "duckdb-engine>=0.17.0",
    "msgspec>=0.20.0",
    "sqlmodel>=0.0.31",
    "tqdm>=4.67.1",
]

frontend = [
    "marimo",
    "magical-athlete-simulator",
    "polars>=1.36.1",
    "altair>=6.0.0",
]


[dependency-groups]
dev = ["pytest>=9.0.2", "ruff==0.8.4", "basedpyright==1.23.0", "marimo[lsp]"]


[project.scripts]
magical-sim = "magical_athlete_simulator.cli:main"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "PLR",
    "E501",
    "G004",
    "TRY003",
    "EM101",
    "S311",
    "C901",
    "RET505",
]

# Ruff
[tool.ruff]
exclude = ["tests", "apps/frontend"]


# Pyright
[tool.basedpyright]
include = ["src", "tests"]
exclude = ["apps/frontend"]
executionEnvironments = [{ root = "src" }, { root = "tests" }]


reportImportCycles = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnusedCallResult = "none"
reportMissingTypeStubs = "none"

# Pytest
[tool.pytest.ini_options]
pythonpath = ["tests"]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
