[project]
name = "magsim"
version = "1.0.3"
description = "A simulator for Magical Athlete"
authors = [{ name = "Philipp Schoneville", email = "philipp@schoneville.com" }]
license = "MIT"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "rich>=13.7.1",
    "cappa>=0.31.0",
    "duckdb-engine>=0.17.0",
    "msgspec>=0.18.6",
    "tqdm>=4.67.1",
    "polars>=1.36.1",
]
[project.urls]
Repository = "https://github.com/pschonev/magsim"
Changelog = "https://github.com/pschonev/magsim/blob/main/CHANGELOG.md"

[project.optional-dependencies]
frontend = ["marimo==0.18.4", "altair==6.0.0", "numpy>=2.4.1"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "basedpyright==1.23.0",
    "marimo[lsp]",
    "ruff>=0.14.10",
    "poethepoet>=0.40.0",
    "commitizen>=4.11.0",
]

[project.scripts]
magsim = "magsim.__main__:main"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "PLR",
    "E501",
    "G004",
    "TRY003",
    "EM101",
    "S311",
    "C901",
    "RET505",
]

# Ruff
[tool.ruff]
exclude = ["tests"]
target-version = "py312"

# Pyright
[tool.basedpyright]
include = ["src", "tests"]
executionEnvironments = [{ root = "src" }, { root = "tests" }]

pythonVersion = "3.12"

reportImportCycles = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnusedCallResult = "none"
reportMissingTypeStubs = "none"
reportUnusedParameter = "none"

# Pytest
[tool.pytest.ini_options]
pythonpath = ["tests"]
testpaths = ["tests"]

# Commitizen
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true


# Poe
[tool.poe]
envfile = ".env"

[tool.poe.tasks]
clean = "rm -rf dist"
bump-files = "cz bump --yes --files-only"
release-prep = "python scripts/release_prep.py"

git-add = "git add pyproject.toml uv.lock CHANGELOG.md docs/ frontend/magical_athlete_analysis.py"
git-finalize = "python scripts/release_git.py"

release-build = "uv build"
release-publish = "uv publish"

release-push = "git push"
release-push-tags = "git push --tags"

release-github = { shell = 'ver=$(cz version --project) && cz changelog "$ver" --dry-run > release_notes.md && gh release create "$ver" --notes-file release_notes.md' }

release = { sequence = [
    "clean",
    "bump-files",
    "release-prep",
    "git-add",
    "git-finalize",
    "release-build",
    "release-publish",
    "release-push",
    "release-push-tags",
    "release-github",
] }


[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
